# The-Ai-Marketing

./: README.md
backend/: .gitignore  README.md  pyproject.toml
backend/ai_marketing_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: main.py
backend/app/adapters/: cache.py  image_dalle.py  llm_openai.py  logger_structlog.py  news_newsapi.py  post_agent.py  post_reviewer.py  trends_pytrends.py
backend/app/application/dto/: post_generation.py
backend/app/application/ports/: clock.py  image.py  llm.py  logger.py  news.py  post_agent.py  post_review.py  trends.py
backend/app/application/services/: mappers.py  post_agent.py
backend/app/application/usescases/: generate_brief.py  generate_post.py
backend/app/application/utils/: costs.py
backend/app/config/: pricing.py
backend/app/domain/: errors.py  models.py
backend/app/infrastructure/http/: controllers.py  di_container.py  errors.py  middleware.py
backend/app/interface/http/: di_container.py
backend/tests/: test_generate_post_usecase.py  test_post_generation_adapter.py  test_post_review_adapter.py
client/: README.md  index.html  package-lock.json  package.json
client/src/: App.tsx  main.tsx
client/src/api/: client.ts  types.ts
client/src/components/: ChatSection.tsx  HashtagsEmojiSection.tsx  InputSection.tsx  LoadingState.tsx  MainForm.tsx  MemorySection.tsx  PersonalitySlider.tsx  PostHistory.tsx  PromptSection.tsx  ResultPanel.tsx  Sidebar.tsx  SocialPreview.tsx  WordCountSection.tsx  index.ts
client/src/mocks/: backendResponses.ts  defaultPosts.ts  index.ts  (+1 more)
(+22 files in other folders)
