[project]
name = "ai-marketing-agent"
version = "0.1.0"
description = "AI Marketing Agent (Hexagonal)"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.8.2",
    "python-dotenv==1.0.1",
    "structlog==24.4.0",
    "tenacity==9.0.0",
    "openai==1.102.0",
    "pytrends==4.9.2",
    "newsapi-python==0.2.7"
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
]

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8000
reload = true
